[project]
name = "knode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.3.0",
    "tenacity>=9.1.2",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
